# coding

./: .gitignore  CMakeLists.txt  README.md  clang-toolchain.cmake  plantuml_timing_diagram.uml
.github/workflows/: main.yml
assert/: README.md  assert.h
assert/inc/: assert.h
auto_h20/: auto_h20.ino
averager/: CMakeLists.txt  README.md  lamda_ave.c  main.c
averager/inc/: lamda_ave.h
averager/test/: CMakeLists.txt  input.txt  main.c
chicken_gate/cabling/: cabling.yml
chicken_gate/chicken_gate/: chicken_gate.ino
cutest/: CMakeLists.txt
fff/: CMakeLists.txt
ffpn/: CMakeLists.txt  README.md  ffpn.c  ffpn.h
ffpn/inc/: ffpn.h
ffpn/test/: main.c
fixedpoint/: CMakeLists.txt  README.md  fixedpoint.c  fixedpoint.h
fixedpoint/inc/: fixedpoint.h
fixedpoint/test/: CMakeLists.txt  fixedpoint_tests.c  main.c
generic_sm/: CMakeLists.txt  README.md  generic_sm.cpp  sm.puml
generic_sm/inc/: generic_sm.h
generic_sm/test/: CMakeLists.txt  main.cpp
led_sensor/laser_command/: laser_command.ino
led_sensor/single_led_sensor/: single_led_sensor.ino
led_sensor/test_matrix/: test_matrix.ino
leetcode/arrays/: contain_duplicate.c  findDuplicate.py  intersect.c  intersect.cpp  max_profits.c  remove_duplicates.c  rotate_array.c  single_number.c  two_sum.c
leetcode/linkedlists/: linked_list_cycle.c  merge_two_sorted_lists.c  reverse_list.c
leetcode/sorting/: sorting.c
leetcode/strings/: first_unique_character.c  my_atoi.c  reverse_string.c  str_str.c
linkedlist/: CMakeLists.txt  linkedlist.c
linkedlist/inc/: linkedlist.h
linkedlist/test/: CMakeLists.txt  linkedlist_tests.c
nite-lite/: nite-lite.ino
pid/: CMakeLists.txt  README.md  pid.c  pid.py
pid/inc/: pid.h
pid/test/: CMakeLists.txt  main.c
rust/guessing_game/: Cargo.toml  README.md
sin/lookup/: sin_lkup.c
sin/taylor/: sin_taylor.c
stack/: CMakeLists.txt  README.md  stack.c
state_machines/: README.md
state_machines/sm_event_centric/: sm_event_centric.ino
state_machines/sm_state_centric/: sm_state_centric.ino
state_machines/sm_table_driven/: sm_table_driven.ino
template/: CMakeLists.txt  README.md  exec_template.cmake  template.c
template/inc/: template.h
template/test/: CMakeLists.txt  main.c  template_tests.c
